visual updating four

--- a/PokeAPI.html
+++ b/PokeAPI.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <nav class="container">
-        <div class="navbar">
+    <nav class="navbar container-fluid rounded-3">
+        <div class="">
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="PokeAPI.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pokemon</a>
+                    <a class="nav-link" href="Pokemon.html">Pokemon</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -27,9 +27,9 @@
         </div>   
        
     </nav>  
-    <div class="container"><div class="jumbotron bg-light rounded-3">
+    <div class="container rounded-3"><div class="jumbotron rounded-3">
         <div class="title container">
-            <h1 class="display-5 fw-bold">Pokemon Gaming Cards</h1>
+            <h1 class="">Pokemon Gaming Cards</h1>
             <p class="">
                 Using a series of utilities, you can create this jumbotron, just
                 like the one in previous versions of Bootstrap. Check out the
@@ -39,7 +39,7 @@
     </div>     
              
 
-    <div id="pokemonCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="pokemonCarousel" class="carousel slide rounded-3" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="container" style="max-width: 18rem;">
@@ -108,8 +108,8 @@
         </button>
     </div>
 
-    <div class="">
-        <h1>Pokemon Search</h1>
+    <div class="container">
+        <h1 class="search-title">Pokemon Search</h1>
         <div id="pokemon-info">
             <form id="pokemon-form">
                 <label for="search-pokemon">Who are you searching for?</label>
