visual updating five

--- a/Pokemon.html
+++ b/Pokemon.html
@@ -18,16 +18,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="Pokemon.html">Pokemon</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
+                
             </ul>
         </div>   
     </nav> 
-
-    <div id="imageContainer" class="all_poke container-fluid">
-        <img id="pokeImage" src="images/all_poke_detail.jpg" alt="all pokemon image">
+    <div class="container" >
+      <div id="imageContainer" class="all_poke container-fluid"></div>
+        <img id="pokeImage" src="images/all_poke_detail.jpg" alt="all pokemon image" width="450" height="550">
+        </div>  
     </div>
+
+    
 
     <script src="Pokemon.js"></script>
 </body>
