README & html update

--- a/PokeAPI.html
+++ b/PokeAPI.html
@@ -29,9 +29,7 @@
         <div class="title container">
             <h1 class="">Pokemon Gaming Cards</h1>
             <p class="">
-                Using a series of utilities, you can create this jumbotron, just
-                like the one in previous versions of Bootstrap. Check out the
-                examples below for how you can remix and restyle it to your liking.
+                This web app allows users to explore information about different Pokemon. It provides a simple interface with search functionality and image references, making it easy to find and learn about your favorite Pokemon!
             </p>
         </div>
     </div>     
