--- a/Pokemon.html
+++ b/Pokemon.html
@@ -23,7 +23,7 @@
         </div>   
     </nav> 
     <div class="container" >
-      <div id="imageContainer" class="all_poke container-fluid"></div>
+      <div id="imageContainer" class="all_poke container-fluid">
         <img id="pokeImage" src="images/all_poke_detail.jpg" alt="all pokemon image" width="450" height="550">
         </div>  
     </div>
